<resources><string name="Hello">Hello World, Click Me!</string><string name="ApplicationName">Planejar</string><!-- TODO: Login --><string name="loginTitulo">LOGIN</string><string name="loginEmail">E-Mail</string><string name="loginSenha">Senha</string><string name="loginBTEntar">Entrar</string><!-- TODO: Cadastro Usuario--><string name="CadUsuarioTitulo">Cadastro de Usuário</string><string name="CadUsuarioNome">Nome</string><string name="CadUsuarioEmail">E-mail</string><string name="CadUsuarioSenha">Senha</string><string name="CadUsuarioBTSalvar">Salvar</string><string name="openDrawer">Open</string><string name="closeDrawer">Close</string><!-- TODO: Categoria--><string name="CategoriaTitulo1">Listagem de Categorias</string><string name="CategoriaTitulo2">Categoria</string><string name="CategoriaTitulo3">Metas da Categoria</string><string name="CategoriaDescricao">Descrição</string><string name="CategoriaTipo">Tipo</string><string name="CategoriaCor">Cor</string><string name="CategoriaBTItens">Itens</string><string name="CategoriaBTCanc">Cancelar</string><string name="CategoriaBTMetas">Metas</string><string name="CategoriaBTOk">OK</string><string-array name="tipoCategoria"><item>Receita</item><item>Despesa</item></string-array><!-- TODO: Itens --><string name="ItemCatTitulo1">Itens da Categoria</string><string name="ItemCatCategoria">Categoria</string><string name="ItemCatTitulo2">Item da Categoria</string><string name="ItemCatDescricao">Descrição</string><string name="ItemCatBTAtivo">Ativa</string><string name="ItemCatBTCanc">Cancelar</string><string name="ItemCatBTOk">Ok</string><!-- TODO: Metas --><string name="MetasCatTitulo1">Metas da Categoria</string><string name="MetasCatCategoria">Categoria</string><string name="MetasCatTitulo2">Meta da Categoria</string><string name="MetasCatInicio">Início</string><string name="MetasCatFim">Fim</string><string name="MetasCatValor">Valor</string><string name="MetasCatRealizado">Realizado</string><string name="MetasCatTitulo3">Meta X Realizado</string><string name="MetasCatBTCanc">Cancelar</string><string name="MetasCatBTOk">Ok</string><string name="openDrawer">Open</string><string name="closeDrawer">Close</string><!-- TODO: Conta--><string name="ContaTitulo1">Listagem de Contas</string><string name="ContaTitulo2">Conta</string><string name="ContaTitulo3">Histórico de Movimentos</string><string name="ContaDescricao">Descrição</string><string name="ContaTipo">Tipo</string><string name="ContaCor">Cor</string><string name="ContaAtiva">Ativa</string><string name="ContaBTCanc">Cancelar</string><string name="ContaBTOk">OK</string><string-array name="tipoConta"><item>Corrente</item><item>Poupança</item><item>Outras</item></string-array><!-- TODO: RESUMO--><string name="ResumoTitulo1">Resumo</string><string name="ResumoTitulo2">Despesas por Categoria</string><string name="ResumoReceitas">Receita</string><string name="ResumoDespesas">Despesas</string><string name="ResumoDescricao">Descrição</string><string name="ResumoSaldo">Saldo</string><!-- TODO: Movimentos--><string name="MovTitulo1">Movimentos</string><string name="MovTitulo2">Lançamento</string><string name="MovPeriodo">Período</string><string name="MovTotal">Total</string><string name="MovTotalFuturo">Total Geral</string><string name="MovDescricao">Descrição</string><string name="MovSaldo">Saldo</string><string name="MovDesp">Despesa</string><string name="MovRec">Receita</string><string name="MovData">Data</string><string name="MovCategoria">Categoria</string><string name="MovItem">Item</string><string name="MovValor">Valor</string><string name="MovParcelar">Parcelar</string><string name="MovNumParcelas">NumParcela</string><string name="MovDiaVecto">Dia de Vencimento</string><string name="MovPagto">Pago</string><string name="MovDataPagto">Data Pagamento</string><string name="MovConta">Conta</string><string-array name="MovTipo"><item>Receita</item><item>Despesa</item></string-array><!-- TODO: Planejamento--><string name="PlaTitulo1">Planejamento</string><string name="PlaContas">Contas</string><string name="PlaReceitas">Receitas</string><string name="PlaTotal">Total</string><string name="PlaAddCategorias">+Categorias de Despesa</string><!-- TODO: Menu --><string-array name="listaMenu"><item>Resumo</item><item>Contas</item><item>Categorias</item><item>Movimentos</item><!--<item>Planejamento</item>--></string-array><!-- TODO: Palet Colors --><string-array name="paletColors"><item>#ef0905</item><item>#fc4700</item><item>#ffff00</item><item>#04ff00</item><item>#001aac</item><item>#7901fa</item><item>#f904dc</item><item>#ffffff</item><item>#000000</item></string-array></resources>