<RelativeLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_margin="10dp" android:layout_height="match_parent" xmlns:fab="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"><TextView android:text="@string/ResumoTitulo1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="center" android:gravity="center" android:id="@+id/textView10" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/ResumoReceitas" android:id="@+id/textView13" android:layout_below="@+id/textView10" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_marginTop="29dp" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="Large Text" android:id="@+id/resumoReceita" android:layout_alignTop="@+id/textView13" android:layout_alignRight="@+id/ResumoBTAdd" android:layout_alignEnd="@+id/ResumoBTAdd" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/ResumoDespesas" android:id="@+id/textView15" android:layout_below="@+id/resumoReceita" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="Large Text" android:id="@+id/ResumoDespesa" android:layout_alignTop="@+id/textView15" android:layout_alignRight="@+id/resumoReceita" android:layout_alignEnd="@+id/resumoReceita" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/ResumoSaldo" android:id="@+id/textView17" android:layout_marginTop="27dp" android:layout_below="@+id/ResumoDespesa" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="ResumoSaldo" android:id="@+id/ResumoSaldo" android:layout_alignTop="@+id/textView17" android:layout_alignRight="@+id/ResumoDespesa" android:layout_alignEnd="@+id/ResumoDespesa" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/ResumoTitulo2" android:id="@+id/textView19" android:layout_below="@+id/ResumoSaldo" android:layout_centerHorizontal="true" android:layout_marginTop="25dp" /><WebView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/resumoChart" android:layout_below="@+id/textView19" android:layout_centerHorizontal="true" /><com.refractored.fab.FloatingActionButton android:id="@+id/ResumoBTAdd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_add_circle_black_48dp" fab:fab_colorNormal="@color/accent" fab:fab_colorPressed="@color/accent_pressed" fab:fab_colorRipple="@color/ripple" fab:fab_size="mini" fab:fab_shadow="false" android:foregroundGravity="bottom" android:layout_marginBottom="20dp" android:layout_alignParentBottom="true" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:layout_marginRight="20dp" /></RelativeLayout>