<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"><android.support.v7.widget.Toolbar android:id="@+id/toolbar" android:layout_height="wrap_content" android:layout_width="match_parent" android:minHeight="?attr/actionBarSize" android:background="?attr/colorPrimary" app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" /><RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="left|center_vertical" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_below="@+id/toolbar" android:layout_marginTop="0.0dp"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/MetasCatTitulo2" android:id="@+id/textView4" android:textSize="30dp" android:layout_centerHorizontal="true" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/MetasCatInicio" android:id="@+id/textView8" android:layout_below="@+id/MatCatAtivo" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" /><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/textView8" android:layout_alignParentLeft="true" android:id="@+id/linear1" android:layout_alignParentStart="true" /><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/linearLayout" android:layout_below="@+id/linear1"><EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="date" android:ems="10" android:id="@+id/MetCatInicio" android:layout_weight="1" /></LinearLayout><LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:layout_alignParentBottom="true" android:id="@+id/linearLayout3" /><EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="date" android:ems="10" android:id="@+id/MetCatFim" android:layout_weight="1" android:layout_below="@+id/textView10" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/MetasCatFim" android:id="@+id/textView10" android:layout_below="@+id/linearLayout" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" /><EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="date" android:ems="10" android:id="@+id/MetCatValor" android:layout_weight="1" android:layout_alignParentStart="true" android:layout_below="@+id/textView13" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/MetasCatValor" android:id="@+id/textView13" android:layout_below="@+id/MetCatFim" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" /><Switch android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ItemCatBTAtivo" android:id="@+id/MatCatAtivo" android:checked="false" android:layout_below="@+id/textView4" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:layout_alignParentTop="false" android:allowUndo="true" android:clickable="false" /></RelativeLayout></RelativeLayout>