<RelativeLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"><TextView android:layout_width="2dp" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/rowListMetCatImg" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_alignBottom="@+id/tableLayout" android:background="@color/colorConf" /><TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_toRightOf="@+id/rowListMetCatImg" android:layout_toEndOf="@+id/rowListMetCatImg" android:id="@+id/tableLayout" android:layout_marginLeft="10dp"><TableRow android:layout_width="match_parent" android:layout_height="match_parent"><TextView android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/MetasCatInicio" android:id="@+id/textView10" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_column="0" android:layout_gravity="bottom|right" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="Medium Text" android:id="@+id/rowListMetCatInicio" android:layout_alignParentTop="true" android:layout_toRightOf="@+id/textView10" android:layout_toEndOf="@+id/textView10" android:layout_column="1" android:layout_marginLeft="10dp" /></TableRow><TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:layout_gravity="right"><TextView android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/MetasCatFim" android:id="@+id/textView13" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_column="0" android:layout_gravity="bottom|right" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="Medium Text" android:id="@+id/rowListMetCatFim" android:layout_alignParentTop="true" android:layout_toRightOf="@+id/textView13" android:layout_toEndOf="@+id/textView13" android:layout_column="1" android:layout_marginLeft="10dp" /></TableRow><TableRow android:layout_width="match_parent" android:layout_height="match_parent"><TextView android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/MetasCatValor" android:id="@+id/textView14" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_column="0" android:layout_gravity="bottom|right" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="Medium Text" android:id="@+id/rowListMetCatValor" android:layout_alignParentTop="true" android:layout_toRightOf="@+id/textView14" android:layout_toEndOf="@+id/textView14" android:layout_column="1" android:layout_marginLeft="10dp" /></TableRow><TableRow android:layout_width="match_parent" android:layout_height="match_parent"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/MetasCatRealizado" android:id="@+id/textView15" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_column="0" android:layout_gravity="bottom|right" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="Medium Text" android:id="@+id/rowListMetCatRealizado" android:layout_alignParentTop="true" android:layout_toRightOf="@+id/textView15" android:layout_toEndOf="@+id/textView15" android:layout_column="1" android:layout_marginLeft="10dp" /></TableRow></TableLayout></RelativeLayout>